<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plans_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/plans_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_lg"
            android:paddingTop="@dimen/spacing_md"
            android:paddingBottom="@dimen/spacing_sm">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plans_title"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/plans_subtitle"
                android:textAppearance="@style/TextAppearance.Ginansya.Caption" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/plans_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                app:chipSpacingHorizontal="@dimen/spacing_sm"
                app:singleLine="true"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/plans_filter_all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_active"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/plans_filter_active" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_completed"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/plans_filter_completed" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plans_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/spacing_lg"
            android:paddingTop="@dimen/spacing_sm"
            android:paddingBottom="100dp"
            tools:listitem="@layout/item_plan" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/new_plan_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_lg"
        android:text="@string/action_new_plan"
        app:icon="@drawable/ic_add"
        app:iconTint="?colorOnPrimary"
        android:textColor="?colorOnPrimary"
        app:backgroundTint="?colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
